--- a/src/style.scss
+++ b/src/style.scss
@@ -751,6 +751,7 @@ a.bga-game-item.gamename {
 @import "games/threethousandscoundrels";
 @import "games/throughtheagesnewstory";
 @import "games/tichu";
+@import "games/tinytown";
 @import "games/trekkingtheworld";
 @import "games/trektwelve";
 @import "games/turingmachine";
